fixed event card z-index, add link to get start

--- a/src/app/event-main-list-row-card/event-main-list-row-card.component.css
+++ b/src/app/event-main-list-row-card/event-main-list-row-card.component.css
@@ -1,12 +1,17 @@
 .carousel-container {
   height: 100px;
+
+}
+
+carousel {
+
 }
 
 .button-pos {
   margin-top: 2px;
   margin-right: 5px;
   float: right;
-
+  z-index: 1;
 }
 
 .button-container {
@@ -16,6 +21,7 @@
 .button-container i {
   color: red;
   text-shadow: 2px 2px 2px #aaa;
+  cursor: pointer;
 }
 
 button {
@@ -53,7 +59,6 @@ button {
 }
 
 .card {
-  cursor: pointer;
   border-radius: 25px;
   margin-right: 10px;
   box-shadow: 0 16px 24px 2px rgba(0, 0, 0, .1)
@@ -66,12 +71,26 @@ button {
 
 }
 
+#title {
+  z-index: 3;
+}
+
+#title a {
+  color: black;
+  text-decoration: none;
+}
+
 .iframe-pos {
   top: 0;
   position: absolute;
   width: 100%;
   height: 100%;
   border-radius: 25px;
+  z-index: -1;
+}
+
+.iframe-pos-active {
+  z-index: 5;
 }
 
 .iframe-container {
